# aia-core

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  game_4_04-10-2026 8.csv  poker.db  poker_game.db  pyproject.toml  ruff.toml  start.ps1
.beads/: .beads-credential-key  interactions.jsonl  metadata.json
.github/: README.md  copilot-instructions.md
alembic/: env.py
backend/: Dockerfile  Dockerfile.gpu  poker.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b5508c850b1_add_is_active_to_game_players.py  52d3d811056e_add_sb_bb_player_ids_to_hands.py  82e125bf0e2b_add_current_chips_to_game_players.py  e08af6081a61_add_blind_timer_remaining_seconds_to_.py  e17bfa85ae2f_make_player_hand_card_columns_nullable.py  e1cc346116d4_add_blind_fields_to_game_sessions.py  ec09e08aa2b8_add_source_upload_id_to_hands_table.py  ec0a5fb26dc7_add_seat_number_to_game_players.py
backend/src/app/: main.py  middleware.py
backend/src/app/database/: models.py  queries.py  session.py
backend/src/app/routes/: games.py  hands.py  images.py  players.py  search.py  stats.py  upload.py
backend/src/app/services/: betting.py  equity.py  evaluator.py  hand_ranking.py  hand_state.py
backend/src/pydantic_models/: card_validator.py  csv_schema.py  csv_schemas.py  detection_schemas.py  game_schemas.py  hand_schemas.py  player_schemas.py  search_schemas.py  stats_schemas.py
backend/test/: test_add_player_to_game_api.py  test_add_remove_player_hand_api.py  test_alembic_setup.py  test_analytics_models.py  test_awards_api.py  test_bet_raise_all_in.py  test_betting_state_machine.py  test_blind_fields.py  test_blinds_api.py  test_card_detection_api.py  test_card_gated_flow.py  test_chip_stack_tracking.py  test_create_game_session_api.py  test_dealer_flow_integration.py  test_dealer_flow_smoke.py  test_default_buy_in.py  test_detection_correction_api.py  test_docker_config.py  test_equity.py  test_equity_excludes_folded.py  test_evaluator.py  test_export_csv_api.py  test_fold_action_sets_result.py  test_fold_outcome_street.py  test_game_session_players_field.py  test_game_winners_api.py  test_get_hand_actions_api.py  test_get_hand_api.py  test_hand_model.py  test_hand_sb_bb_response.py  test_hand_state_model.py  test_hand_state_service.py  test_hand_status_etag.py  test_head_to_head_api.py  test_highlights_api.py  test_image_upload_api.py  test_latest_hand_api.py  test_leaderboard_api.py  test_list_game_sessions_api.py  test_none_community_cards_bug.py  (+25 more)
docs/: All In Analytics System Architecture.drawio  deployment.md  initial_system_architecture.md  local-network-setup.md  user-onboarding-guide.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
scripts/: download_dataset.py  seed_demo_game.py  setup_poetry.sh  setup_uv.sh  share.sh  train_card_detector.py  (+2 more)
(+820 files in other folders)
