[project]
name = "all-in-analytics-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam"}
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.1",
    "pydantic",
    "fastapi",
    "uvicorn",
    "python-dateutil",
    "SQLAlchemy",
    "pytz",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
dev = [
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
