[project]
name = "all-in-analytics-core"
version = "0.1.0"
description = "Core backend for the All In Analytics poker insight tool."
requires-python = ">=3.12"
authors = [{ name = "Adam" }]
dependencies = [
    "ipython>=9.0.1",
    "pydantic",
    "fastapi",
    "uvicorn",
    "python-dateutil",
    "sqlalchemy",
    "alembic",
    "pytz",
    "httpx",
    "python-multipart",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-mock",
]
dev = [
    "ruff",
    "pre-commit",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/pydantic_models"]
